# zenith-tv

./: .gitignore  CHECKLIST.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_node.js  test_vlc.cpp
.claude/: settings.local.json
apps/desktop/: README.md  electron-builder.json  electron.vite.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/electron/: database.js  main.cjs  main.js  p2p-server.cjs  p2p-server.js  preload.cjs  preload.js  schema.sql
apps/desktop/src/: App.tsx  index.css
apps/mobile/: README.md
apps/tizen/: .gitignore  README.md  config.xml  index.html  package.json  plan.md  vite.config.ts
apps/tizen/docs/: priviliges.md
apps/tizen/docs-in-use/: app-filtering-for-zenith-tv.md  build-and-package.md  privileges-for-zenith-tv.md  signing-certificates.md  web-runtime.md
apps/tizen/scripts/: create-wgt.js
apps/tizen/src/: App.tsx  index.css
core/parser/: Cargo.toml  index.ts  package.json
core/parser/src/: categorizer.rs  category_tree.rs  episode_detector.rs  lib.rs  parser.rs  year_detector.rs
core/vlc-player/: README.md  binding.gyp  index.d.ts  index.js  package.json  test-vlc.js
core/vlc-player/scripts/: build.sh  download-vlc-sdk.js  generate-def.js
core/vlc-player/src/: vlc_audio.cpp  vlc_callbacks.cpp  vlc_context_menu.cpp  vlc_context_menu_actions.cpp  vlc_controls.cpp  (+18 more)
shared/content/: package.json  tsconfig.json
shared/protocol/: package.json
shared/types/: package.json
shared/ui/: components.json  package.json  tsconfig.json
(+186 files in other folders)
