[package]
name = "zenith-parser"
version = "0.1.0"
edition = "2021"
authors = ["myniqx"]
description = "High-performance M3U parser for Zenith TV"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Regex for episode detection
regex = "1.10"
lazy_static = "1.4"

# Optional: For better performance
memchr = "2.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
